<resources>
    <string name="app_name">Podcasts</string>
    <string name="navigation_item_1">First</string>
    <string name="navigation_item_2">Second</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>

    <string name="subscribe">Subscribe</string>
    <string name="detail_transition_image">detail_transition_image</string>
    <string name="episodes">episodes</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="detail_transition_toolbar">detail_transition_toolbar</string>
    <string name="subscribed">Subscribed</string>
    <string name="download_all">Download all</string>
    <string name="listen_to_all">Listen to all</string>

    <string name="audio">AUDIO</string>
    <string name="video">VIDEO</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="title_not_available">Title not available</string>
    <string name="download_completed">Download completed</string>
    <string name="detail_transition_card">detail_transition_cardview</string>
    <string name="invalid_media">Invalid media</string>
    <string name="episode_image_transition">episode_image_transition</string>
    <string name="downloaded">Downloaded</string>
    <string name="not_downloaded">Not downloaded</string>
    <string name="played">Played</string>
    <string name="not_played">Not played</string>
    <string name="notification_message">Playing</string>
    <string name="notification_title">Podcasts</string>
    <string name="label_previous">Previous</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_next">Next</string>
    <string name="notification_subtitle">Subtitle</string>
    <string name="stop">Stop</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="loading">Loading…</string>
    <string name="currently_playing">Currently playing</string>
    <string name="player_error">Player Error</string>

    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="no_space">Download failed, insufficient storage</string>
    <string name="settings">Settings</string>
    <string name="downloads">Downloads</string>
    <string name="downloadedLowercase">downloaded</string>
    <string name="not_downlaoded">not downloaded</string>
    <string name="delete_all">Delete all</string>
    <string name="delete">Delete</string>
    <string name="confirm_download_episode">Do you want to download</string>
    <string name="listen_wifi_title">Listen over WiFi only</string>
    <string name="listen_wifi_title_summary">Listen to not downloaded episodes over wiFi only (RECOMMENDED)</string>
    <string name="download_wifi_title">Download over WiFi only</string>
    <string name="download_wifi_title_summary">Download episodes over wiFi only (RECOMMENDED)</string>
    <string name="listen_wifi">listen_wifi</string>
    <string name="download_wifi">download_wifi</string>
    <string name="external_storage">external_storage</string>
    <string name="external_storage_title">Download to SD card</string>
    <string name="external_storage_unavailable">External storage unavailable</string>
    <string name="confirm_download_all">Do you want to download all episodes of</string>
    <string name="confirm_delete_episode">Do you want to delete</string>
    <string name="confirm_delete_all_episodes">Do you want to delete all episodes of</string>
    <string name="install_outside_google_play_title">Unauthorized installation detected</string>
    <string name="install_outside_google_play_messagge">The developer supports only installation via Google Play, this application will not run, apologies for the inconvenience</string>
    <string name="app_not_supported_title">Application not supported anymore</string>
    <string name="app_not_supported_messagge">This app is not supported anymore by the developer. Now it will terminate, apologies for the inconvenience</string>
    <string name="please_upgrade_message">Please upgrade the application via Google Play. This instance will now terminate, apologies for the inconvenience</string>
    <string name="please_upgrade__title">Upgrade needed</string>
    <string name="find">Find</string>
    <string name="subscribed_podcasts">Subscribed podcasts</string>
    <string name="will_be_downloaded">will be downloaded and added to the playlist</string>
    <string name="auto_download_title">Auto download</string>
    <string name="auto_download_summary">Download when subscribed</string>
    <string name="auto_download">auto_download</string>
    <string name="playlist">Playlist</string>
    <string name="time_out">Server took to long to respond</string>
    <string name="retry">RETRY</string>
    <string name="nothing_to_see">...nothing to see here...</string>
    <string name="restart_or_resume">Restart or resume?</string>
    <string name="restart">Restart</string>
    <string name="resume">Resume</string>


</resources>
