<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/subscribed"
            android:icon="@drawable/ic_star_white_48dp"
            android:title="@string/subscribed" />
        <item
            android:id="@+id/add_podcast"
            android:icon="@drawable/ic_search_white_48dp"
            android:title="@string/search" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white_48dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/downloads"
            android:icon="@drawable/ic_file_download_white_24dp"
            android:title="@string/downloads" />
    </group>
</menu>